added generate report button (#65)
## Related Ticket

https://planner.cloud.microsoft/webui/v1/plan/hje9cdYoUUmS19kW8S3Jj5YABmbQ/view/board/task/67_fb9gg3kGIiDI8HwAvn5YABuX6?tid=7ed9bdc7-964d-4dc0-9084-812b90e05c6d

## Description
Added a functioning button that will download details of all currently
available job roles. This can be located at the bottom of view job roles
page.

--- a/views/job-role-list.njk
+++ b/views/job-role-list.njk
@@ -311,6 +311,15 @@
                     </div>
                 {% endfor %}
             </div>
+            
+            <!-- Generate Report Button -->
+            <div class="flex justify-center mt-8">
+                <a href="/job-roles/export" class="btn btn-accent gap-2" title="Generate CSV Report">
+                    <i data-lucide="download" class="w-5 h-5"></i>
+                    {{ t('jobRoles.generateReport') or 'Generate Report' }}
+                </a>
+            </div>
+            
             <!-- Pagination Controls -->
             {% if paginationData and paginationData.totalPages > 1 %}
                 <div
